rtg_tests/negative/main_method/go.mod
module example.com/rtgtests/negative/main_method

go 1.25
